@@ -1,3 +1,9 @@
+Wed Dec 15 13:47:41 CET 2010  John Tytgat  <John.Tytgat@aaug.net>
+
+	* decode.c (oDecodeTable): Add CODE16/CODE32.
+	* m_cpu.c (c_code16, c_code32): Added.
+	* m_cpu.h: Likewise.
+
 Wed Dec 15 13:09:16 CET 2010  John Tytgat  <John.Tytgat@aaug.net>
 
 	* error.c (errorCore): Change "<stdin>" to "{standard input}" like the
